# SDRPlusPlus

./: CLAUDE.md  CMakeLists.txt
.github/workflows/: build_all.yml  release_latest.yml
android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt
android/app/src/main/res/xml/: device_filter.xml
core/: CMakeLists.txt
core/backends/android/: android_backend.h  backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: core.cpp
docs/: architecture.md
sdr-kit/arm64-v8a/include/volk/: volk.h  volk_config_fixed.h  volk_cpu.h  volk_typedefs.h  volk_version.h
sdr-kit/arm64-v8a/lib/: libfftw3f.la
sdr-kit/arm64-v8a/lib/cmake/fftw3/: FFTW3fConfig.cmake
sdr-kit/arm64-v8a/lib/cmake/volk/: VolkConfigVersion.cmake  VolkTargets-release.cmake  VolkTargets.cmake
sdr-kit/arm64-v8a/lib/cmake/zstd/: zstdConfig.cmake  zstdTargets.cmake  zstdTargets_shared-release.cmake  zstdTargets_shared.cmake
sdr-kit/arm64-v8a/lib/pkgconfig/: fftw3f.pc  libzstd.pc  volk.pc
sink_modules/android_audio_sink/src/: main.cpp
source_modules/mirisdr_source/: CMakeLists.txt
source_modules/mirisdr_source/libmirisdr/src/: async.c  devices.c  libmirisdr.c  reg.c  streaming.c  structs.h
source_modules/mirisdr_source/libusb/: CMakeLists.txt
source_modules/mirisdr_source/libusb/libusb/: core.c  libusb.h
source_modules/mirisdr_source/libusb/libusb/os/: linux_usbfs.c
source_modules/mirisdr_source/src/: main.cpp
source_modules/rtl_tcp_source/src/: main.cpp
